# ros2_packages_cpp

./: README.md
indoor_lidar_odom_cpp/: CMakeLists.txt  package.xml
indoor_lidar_odom_cpp/config/: ekf_lidar_imu.yaml
indoor_lidar_odom_cpp/plots/: odom_est.csv
indoor_lidar_odom_cpp/src/: indoor_lidar_odom_ekf_node.cpp  indoor_lidar_odom_node.cpp  lidar_odom_publisher.cpp  odom_est.csv  odom_sim.csv  record_odom_to_csv.py
indoor_lidar_odom_cpp/src/rosbag2_2025_12_11-22_20_55/: metadata.yaml  rosbag2_2025_12_11-22_20_55_0.db3
indoor_lidar_odom_cpp/tools/: evalute_odom_plots.py  odom_est.csv  odom_sim.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/config/: params.yaml
my_cpp_pkg/src/: battery.cpp  battery.h  cpp_mini.cpp  cpp_mini.h  led_panel.cpp  led_panel.h  number_counter.cpp  number_counter.h  number_publisher.cpp  number_publisher.h
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/srv/: SetLed.srv
